--- a/Tugas Pertemuan 9/index.html
+++ b/Tugas Pertemuan 9/index.html
@@ -6,23 +6,25 @@
     <title>Biografi Mahasiswa</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        body {
-            background-color: bisque;
-        }
         p {
             border: groove brown;
             background-color: aliceblue;
+        }
+        h1 {
+            border: dotted black; 
+            color: rgb(49, 91, 170); 
+            text-align: center;
         }
     </style>
 </head>
 <body style="background-color: bisque;">
     <header>
-        <h1 style="border: dotted black; color: rgb(49, 91, 170); text-align: center;">Berikut Detail Biografi Mahasiswa</h1>
-    <p>
+        <h1>Berikut Detail Biografi Mahasiswa</h1>
+        <p>
         NIM : 3124101291 <br>
         Email : amandamelda76@gmail.com <br> 
         Alamat : Jalan Ikan Wijinongko No.5, Sobo, Kec. Banyuwangi, Kab. Banyuwangi
-    </p>
+        </p>
     </header>
     <main>
         <h2>Body pada style inline <br>
